[fix] more sensible z-indexes.

--- a/src/styles/breadcrumb.styl
+++ b/src/styles/breadcrumb.styl
@@ -35,7 +35,7 @@
         top      0
         left     40px // bar hamburger button width
         right    0
-        z-index  100
+        z-index  $nav-index
 
         &.deployed
             bottom     0
@@ -77,4 +77,4 @@
             display none
 
         [role=banner][data-drawer-visible="true"]
-            z-index 2000
+            z-index $nav-index + 1
