--- a/src/styles/toolbar.styl
+++ b/src/styles/toolbar.styl
@@ -78,4 +78,4 @@ b-item
         position absolute
         top      0
         right    0
-        z-index  100
+        z-index  $nav-index
